--- a/Atividade-entrega/Atividade Avaliativa/index.html
+++ b/Atividade-entrega/Atividade Avaliativa/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="./assets/css/carrossel.css">
     <link rel="stylesheet" href="./assets/css/cards.css">
 
-    <title>Ferrari</title>
+    <title>Ferrarii</title>
     
 </head>
 
